--- a/src/pages/career/style.scss
+++ b/src/pages/career/style.scss
@@ -8,7 +8,6 @@
 
 .open_roles_title {
   color: $black;
-  font-size: $fontSize45;
   font-style: normal;
   font-weight: 400;
   line-height: 45px; /* 45px */
@@ -17,7 +16,7 @@
   text-underline-offset: 8px;
   text-decoration-thickness: 2px;
   text-decoration-color: $red;
-
+@include adaptive-font(45,22)
 
 }
 .open_roles_list{
