--- a/src/pages/home/components/consultation/style.scss
+++ b/src/pages/home/components/consultation/style.scss
@@ -61,6 +61,9 @@
   @media screen and (max-width: $md2 + px) {
     flex: 1 1 198px;
   }
+  @media screen and (max-width: $md4 + px) {
+    flex: 1 1 168px;
+  }
 }
 
 .form_title {
@@ -125,8 +128,7 @@
       background-repeat: no-repeat;
       background-position: right center;
       background-size: 30px;
-      padding: 20px;
-
+      padding: 20px 30px;
 
       @media screen and (max-width: $md3 + px) {
         width: 100%;
@@ -134,7 +136,9 @@
 
       }
       @include adaptive-font(22, 12);
-
+     option{
+        padding-right: 20px;
+     }
     }
 
     @media screen and (max-width: $md3 + px) {
@@ -145,10 +149,6 @@
 }
 
 .remember_me {
-  input[type="checkbox"] {
-    display: none;
-  }
-
   display: flex;
   gap: 10px;
   margin-top: 10px;
@@ -171,20 +171,16 @@
       justify-content: center;
       width: 25px;
       height: 25px;
-      background: none;
+      //background: none;
       border: 1px solid white;
       border-radius: 2px;
       position: absolute;
       left: 0;
       top: 0;
+
     }
-  }
-
-  input[type="checkbox"]:checked + label::before {
-    content: '\2713';
 
   }
-
 
   p {
     @include adaptive-font(16, 8);
@@ -192,12 +188,21 @@
     font-style: normal;
     font-weight: 400;
   }
+
+
+   label input[type="checkbox"]:checked + label::before {
+    content: '\2713';
+  }
+  input[type="checkbox"] {
+    display: none;
+  }
+
 }
 
 
 .form_contact_button {
   margin: 22px 0 0;
-  padding: 14px 160px;
+  padding: 10px 140px;
   border-radius: 4px;
   color: #191923;
   text-align: center;
