--- a/src/pages/about/style.scss
+++ b/src/pages/about/style.scss
@@ -1,5 +1,64 @@
 @import "src/assets/variables";
 
+
+
+.about_animation_top_block{
+  background: $backgroundGradient;
+  margin: -30px 0;
+}
+
+.about_top_section_body{
+  display: flex;
+  position: relative;
+  overflow: hidden;
+
+}
+.animation_text_content{
+   flex:  0 0  100%;
+}
+.animation_header_image{
+
+}
+.about_animation_top_image{
+  position: absolute;
+  top: -200px;
+  right: -200px;
+  img{
+    animation: pulse 10s linear infinite;
+
+  }
+  @media (max-width: 1048px) {
+    top: -100px;
+
+  }
+  @media (max-width: 767px) {
+   top: -50px;
+
+  }
+
+  @media (max-width: $md4 + px) {
+    top: 20px;
+    right: -120px;
+
+  }
+
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+
+
 .about_us_list {
   margin-top: 115px;
 }
