--- a/src/pages/home/components/testimonials/style.scss
+++ b/src/pages/home/components/testimonials/style.scss
@@ -189,29 +189,21 @@
 
   }
 
-  &:hover {
-    background-color: $red;
+  @media (any-hover: hover) {
+     &:hover{
+       background-color: $red;
+       p {
+         margin: 30px 0 0;
+       }
 
-    p {
-      margin: 30px 0 0;
-      color: #FFF;
-      font-size: 26px;
-      font-style: italic;
-      font-weight: 400;
-      line-height: 100%;
-    }
+       h3 {
+         color: white;
 
-    h3 {
-      color: white;
-      font-size: $fontSize24;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 37px;
-      text-transform: uppercase;
 
-    }
-
+       }
+     }
   }
+
 
   @media screen and (max-width: $md1 + px) {
     max-width: 500px;
