--- a/src/pages/about/components/aboutItem/style.scss
+++ b/src/pages/about/components/aboutItem/style.scss
@@ -1,56 +1,82 @@
 @import "src/assets/variables";
+@import "src/assets/@mixin";
 
-.about_item{
-   display: flex;
-   justify-content: space-between;
-   gap: 80px;
-   margin: 144px 0 0 ;
+.about_item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  @include adaptive-value("margin-top", 115, 45, 1);
+  @include adaptive-value("gap", 80, 40, 1);
+
+   @media (max-width: $md3 + 20px) {
+      flex-direction: column;
+   &:nth-child(2){
+     flex-direction: column-reverse;
+
+   }
+   }
 }
 
 
-.about_item_text_title{
-   color: $black;
-   font-size: $fontSize74;
-   font-style: normal;
-   font-weight: 400;
-   line-height: 120px;
-   text-transform: uppercase;
+
+.about_item_text_title {
+  color: $black;
+  font-style: normal;
+  font-weight: 400;
+  text-transform: uppercase;
+  @include adaptive-font(74, 35);
+  @include adaptive-value("line-height", 120, 60, 1);
 }
 
 .about_item_description {
-   color: $black;
-   text-align: justify;
-   font-size: $fontSize22;
-   font-style: normal;
-   font-weight: 400;
-   max-width: 620px;
-   line-height: 120%;
-   margin-top: 62px;
-}
-.about_item_subTitle{
-    margin: 30px 0 0 ;
-   color: $black;
-   text-align: justify;
-   font-size: $fontSize22;
-   font-style: normal;
-   font-weight: 400;
-   max-width: 620px;
-   line-height: 120%;
+  color: $black;
+  text-align: justify;
+  font-style: normal;
+  font-weight: 400;
+  max-width: 620px;
+  @include adaptive-font(22, 12);
+  @include adaptive-value("line-height", 27, 14, 1);
+  @include adaptive-value("margin-top", 62, 30, 1);
 
+  @media (min-width: $md3 + px) {
+    margin-top: 20px;
+  }
+  @media (max-width: $md3 + px) {
+    max-width: 100%;
+
+  }
 
 }
+
+.about_item_subTitle {
+  margin: 30px 0 0;
+  color: $black;
+  text-align: justify;
+  font-style: normal;
+  font-weight: 400;
+  max-width: 620px;
+  line-height: 120%;
+  @include adaptive-font(22, 12);
+  @include adaptive-value("line-height", 27, 14, 1);
+  @media (max-width: $md3 + px) {
+    max-width: 100%;
+
+  }
+}
+
 .about_item_image {
-   cursor: pointer;
-   img {
-      filter: grayscale(100%);
-      transition: .3s;
+  cursor: pointer;
 
-   }
+  img {
+    filter: grayscale(100%);
+    transition: .3s;
 
-   &:hover {
-      img {
-         filter: grayscale(0);
+  }
 
-      }
-   }
+  &:hover {
+    img {
+      filter: grayscale(0);
+
+    }
+  }
 }
