--- a/src/pages/about/style.scss
+++ b/src/pages/about/style.scss
@@ -1,10 +1,14 @@
 @import "src/assets/variables";
-
+@import "src/assets/@mixin";
 
 
 .about_animation_top_block{
   background: $backgroundGradient;
   margin: -30px 0;
+  @media (max-width: $md4 + px) {
+    margin: -45px 0;
+
+  }
 }
 
 .about_top_section_body{
@@ -60,7 +64,8 @@
 
 
 .about_us_list {
-  margin-top: 115px;
+  padding: 0 10px;
+  @include adaptive-value("margin-top",115,40,1);
 }
 
 .about_values_title {
@@ -68,34 +73,31 @@
   h3 {
     color: $black;
     text-align: center;
-    font-size: $fontSize100;
     font-style: normal;
     font-weight: 400;
-    line-height: 100px;
     text-transform: uppercase;
-    position: relative;
+    text-decoration: underline;
+    text-underline-offset: 8px;
+    text-decoration-thickness: 1px;
+    text-decoration-color: $red;
 
-
-    &::before {
-      content: '';
-      position: absolute;
-      width: 20%;
-      height: 2px;
-      background-color: $red;
-      bottom: -7px;
-
-    }
+    @include adaptive-font(100, 40);
+    @include adaptive-value("line-height", 100, 40, 1);
   }
 
   p {
-    margin: 40px 0 0;
     color: $black;
     text-align: center;
-    font-size: $fontSize22;
     font-style: normal;
     font-weight: 400;
     line-height: 27px;
     max-width: 400px;
+    padding: 0 10px;
+
+    @include adaptive-font(22, 18);
+    @include adaptive-value("margin-top",40,20,1);
+
+
   }
 }
 
@@ -104,13 +106,22 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 190px;
+
+  @include adaptive-value("margin-top", 190, 50, 1);
+
 }
 
 .about_values_list {
-  margin-top: 100px;
   display: flex;
-  gap: 150px;
+  padding: 0 10px;
+
+  @include adaptive-value("margin-top", 100, 10, 1);
+  @include adaptive-value("gap", 140, 22, 1);
+  @media (max-width: 556px) {
+    gap: 20px;
+
+
+  }
 }
 
 .values_list_item {
@@ -121,12 +132,43 @@
   background: var(--hover, linear-gradient(180deg, #8D1038 0%, #191923 100%));
   box-shadow: 3.75332px 5.25464px 22.5199px 0px rgba(25, 25, 35, 0.36), -5px -5px 4.50398px 0px rgba(255, 255, 255, 0.35) inset;
   backdrop-filter: blur(13.136605262756348px);
+  @media (max-width: 1127px) {
+    min-width: 250px;
+    min-height: 250px;
+  }
+  @media (max-width: 930px) {
+    min-width: 200px;
+    min-height: 200px;
+  }
+  @media (max-width: 821px) {
+    min-width: 150px;
+    min-height: 150px;
+
+    img{
+       width: 40%;
+      height: 40%;
+    }
+  }
+  @media (max-width: 504px) {
+    min-width: 100px;
+    min-height: 100px;
+
+
+  }
+
 }
 
 .about_distinguishes_body {
   display: flex;
   justify-content: space-between;
-  margin-top: 170px;
+  gap: 100px;
+  @include adaptive-value("margin-top",170,50,1);
+  @media (max-width: $md1 + px) {
+      flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
 }
 
 .distinguishes_body_text {
@@ -139,6 +181,12 @@
     font-style: normal;
     font-weight: 400;
     line-height: 30px;
+    @media (max-width: $md1 + px) {
+      flex-direction: column;
+      text-align: center;
+    }
+    @include adaptive-font(22, 18);
+
   }
 }
 
@@ -148,6 +196,34 @@
   justify-content: center;
   position: relative;
 
+  svg{
+     width: 490px;
+    height: 490px;
+
+    @media (max-width: 655px) {
+      width: 440px;
+      height: 440px;
+    }
+    @media (max-width: 554px) {
+      width: 400px;
+      height: 400px;
+    }
+    @media (max-width: 522px) {
+      width: 350px;
+      height: 350px;
+
+    }
+    @media (max-width: 450px) {
+      width: 300px;
+      height: 320px;
+
+    }
+  }
+  @media (max-width: 450px) {
+    margin-left: 40px;
+
+  }
+
 }
 
 .about_distinguishes_img_block_border {
@@ -156,6 +232,14 @@
   align-items: center;
   justify-content: center;
   position: absolute;
+  @media (max-width: 655px) {
+    padding: 10px;
+
+  }
+  @media (max-width: 554px) {
+    padding: 0;
+
+  }
 }
 
 .about_distinguishes_red_block {
@@ -165,6 +249,14 @@
   align-items: center;
   justify-content: center;
   background: var(--hover, linear-gradient(180deg, #8D1038 0%, #191923 100%));
+  @media (max-width: 655px) {
+    padding: 60px;
+
+  }
+  @media (max-width: 522px) {
+    padding: 40px;
+
+  }
 }
 
 .about_distinguishes_white_block {
@@ -174,6 +266,14 @@
   align-items: center;
   justify-content: center;
   border-radius: 4px;
+  @media (max-width: 655px) {
+    padding: 50px;
+
+  }
+  @media (max-width: 522px) {
+    padding: 35px;
+
+  }
 }
 
 .about_distinguishes_img {
@@ -188,25 +288,67 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  @media (max-width: 655px) {
+    min-width: 100px;
+    min-height: 100px;
+  }
+  @media (max-width: 554px) {
+    min-width: 80px;
+    min-height: 80px;
+
+    img{
+       width: 70%;
+      height: 70%;
+    }
+    .img_block{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  @media (max-width: 396px) {
+    min-width:50px;
+    min-height: 50px;
+    img{
+      width: 50%;
+      height: 50%;
+    }
+  }
+
+
 }
 
 .distinguishes_row1 {
-  left: -80px;
+  left: -100px;
+  @media (max-width: 396px) {
+    left: -70px;
+
+  }
 
 }
 
 .distinguishes_row2 {
-  top: -80px;
+  top: -100px;
+
+  @media (max-width: 396px) {
+    top: -60px;
+
+  }
 }
 
 .distinguishes_row3 {
-  bottom: -80px;
-  right: 60px;
+  bottom: -100px;
+  right: 10px;
+  @media (max-width: 396px) {
+    bottom: -60px;
+
+  }
+
 }
 
 .about_our_team {
-  margin-top: 360px;
 
+  @include adaptive-value("margin-top",360,50,1);
 
 }
 
@@ -225,27 +367,24 @@
     line-height: 100px;
     text-transform: uppercase;
     position: relative;
+    text-decoration: underline;
+    text-underline-offset: 8px;
+    text-decoration-thickness: 1px;
+    text-decoration-color: $red;
+    @include adaptive-font(100, 40);
+    @include adaptive-value("line-height", 100, 40, 1);
 
-
-    &::before {
-      content: '';
-      position: absolute;
-      width: 20%;
-      height: 2px;
-      background-color: $red;
-      bottom: -7px;
-
-    }
   }
 
   p {
     margin: 40px 0 0;
     color: $black;
     text-align: center;
-    font-size: $fontSize22;
     font-style: normal;
     font-weight: 400;
     line-height: 27px;
+    @include adaptive-font(22, 18);
+
   }
 }
 
@@ -253,12 +392,20 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
-  margin-top: 220px;
+  @include adaptive-value("margin-top",220,30,1);
+  @media (max-width: 1003px) {
+    overflow-x: scroll;
+  }
 
 }
 
 
-
+.people_item{
+   @media (max-width: 1003px) {
+       min-width: 300px;
+     padding: 0  0 20px 0;
+   }
+}
 .people_item_content {
   position: relative;
   display: flex;
@@ -295,20 +442,23 @@
 
   h3 {
     color: $black;
-    font-size: 30px;
     font-style: normal;
     font-weight: 400;
     line-height: 46px;
+    @include adaptive-font(30, 15);
+
   }
 
   p {
     color: $black;
-    font-size: $fontSize22;
     font-style: normal;
     font-weight: 400;
     line-height: 154.3%;
+    @include adaptive-font(22, 12);
+
   }
 }
 .about_consultation_block{
-   margin-top: 200px;
+  @include adaptive-value("margin-top",200,50,1);
+
 }
