--- a/src/pages/home/components/portfolio/style.scss
+++ b/src/pages/home/components/portfolio/style.scss
@@ -44,6 +44,7 @@
   p {
     color: #191923;
     text-align: center;
+    background-color: white;
     font-style: normal;
     font-weight: 400;
     margin: 30px 0 0;
