--- a/src/pages/footer/style.scss
+++ b/src/pages/footer/style.scss
@@ -42,10 +42,9 @@
    flex-direction: column;
      align-items: center;
     gap: 30px;
-    img{
 
-    }
   }
+
 }
 .footer_menu_block{
    flex: 1 1 100%;
@@ -54,6 +53,10 @@
 
   @media screen and (max-width: 1039px){
    width: 100%;
+  }
+  @media screen and (max-width: 361px){
+    flex-direction: column;
+
   }
 
 }
@@ -132,6 +135,9 @@
    display: flex;
     justify-content: flex-end;
 
+  }
+  @media screen and (max-width: 361px){
+    justify-content: flex-start;
   }
 
 }
