--- a/src/pages/home/components/distinguishesUs/style.scss
+++ b/src/pages/home/components/distinguishesUs/style.scss
@@ -28,7 +28,6 @@
 
 .distinguishes_img_block {
   min-width: 489px;
-  min-height: 480px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -37,6 +36,7 @@
     width: 480px;
     height: 480px;
     position: absolute;
+    border-radius: 5px;
 
 
     @media screen  and (max-width: $md3 + px){
@@ -52,6 +52,10 @@
       width: 320px;
       height: 320px;
 
+    }
+    @media screen  and (max-width: 376px){
+      width: 300px;
+      height: 300px;
     }
 
   }
@@ -95,11 +99,20 @@
     min-height: 50px;
 
   }
+  @media screen  and (max-width: 376px){
+    min-width: 40px;
+    min-height: 40px;
+  }
   .img_block{
     @media screen  and (max-width: $md4 + px){
        width: 60%;
        height: 60%;
     }
+    @media screen  and (max-width: 376px){
+      width: 40%;
+      height: 40%;
+    }
+
   }
 
 }
@@ -111,6 +124,11 @@
     left: -25px;
 
   }
+  @media screen  and (max-width: 376px){
+    left: -15px;
+
+  }
+
 }
 
 .row2 {
@@ -120,13 +138,21 @@
     right: -25px;
 
   }
+  @media screen  and (max-width: 376px){
+    right: -15px;
+
+  }
 }
 
 .row3 {
   top: -35px;
-  left: 120px;
+  left: 80px;
   @media screen  and (max-width: $md4 + px){
-    top: -25px;
+    top: -30px;
+
+  }
+  @media screen  and (max-width: 376px){
+    top: -15px;
 
   }
 }
@@ -135,7 +161,11 @@
   bottom: -30px;
   left: 10px;
   @media screen  and (max-width: $md4 + px){
-    bottom: -25px;
+    bottom: -30px;
+
+  }
+  @media screen  and (max-width: 376px){
+    bottom: -15px;
 
   }
 }
@@ -144,7 +174,11 @@
   bottom: -30px;
   right: 30px;
   @media screen  and (max-width: $md4 + px){
-    bottom: -25px;
+    bottom: -30px;
+
+  }
+  @media screen  and (max-width: 376px){
+    bottom: -15px;
 
   }
 }
@@ -153,7 +187,11 @@
   top: -35px;
   right: 10px;
   @media screen  and (max-width: $md4 + px){
-    top: -25px;
+    top: -30px;
+
+  }
+  @media screen  and (max-width: 376px){
+    top: -15px;
 
   }
 
@@ -207,7 +245,7 @@
     justify-content: center;
     flex-direction: column;
     margin-left: 0;
-    @include adaptive-value("margin-top",50,20,1)
+    @include adaptive-value("margin-top",50,40,1)
 
 
   }
