--- a/src/pages/home/components/ourServices/style.scss
+++ b/src/pages/home/components/ourServices/style.scss
@@ -25,14 +25,12 @@
   }
 
   p {
-    margin: 26px 0 0;
     color: $red;
-    font-size: calc($fontSize17 + 30 * (100vw / 1920));
     font-style: italic;
     font-weight: 300;
-    line-height: calc($fontSize17 + 16 * (100vw / 1920));
     background-color: white;
-    @include adaptive-font(35 , 25 )
+    @include adaptive-font(35 , 25 );
+    @include adaptive-value("margin-top",26 ,10 , 1 )
 
   }
   @include adaptive-value("padding-top",200 ,50 , 1 )
@@ -102,7 +100,6 @@
   p {
     color: $black;
     text-align: justify;
-    font-size: calc(13px + 15 * (100vw / 1920));
     font-style: normal;
     font-weight: 400;
     line-height: calc(15px + 17 * (100vw / 1920));
