--- a/src/pages/home/components/portfolio/style.scss
+++ b/src/pages/home/components/portfolio/style.scss
@@ -32,7 +32,7 @@
     }
 
     &.active::before {
-      width: 30%;
+      width: 50%;
 
     }
 
@@ -204,8 +204,7 @@
   text-align: center;
   font-family: Barlow Condensed;
   font-style: normal;
-  font-weight: 400;
-  line-height: 33px;
+  font-weight: 300;
   text-transform: uppercase;
 
 
@@ -214,7 +213,7 @@
     @include buttonHover
   }
   @media screen  and (max-width: $md3 + px){
-    padding: 15px 47px;
+    padding: 15px 37px;
 
   }
   @include adaptive-font(28,22);
@@ -231,7 +230,7 @@
   text-transform: uppercase;
   display: flex;
   align-items: center;
-  @include adaptive-font(28,22);
+  font-size: $fontSize28;
   @include adaptive-value("line-height",33,20,1);
 
 }
