--- a/src/pages/home/components/testimonials/style.scss
+++ b/src/pages/home/components/testimonials/style.scss
@@ -43,7 +43,7 @@
     justify-content: flex-end;
 
     img {
-      @media screen and (max-width: $md4 + px) {
+      @media screen and (max-width: $md3 + px) {
         width: 50%;
         height: 50%;
       }
@@ -63,7 +63,7 @@
     justify-content: flex-start;
 
     img {
-      @media screen and (max-width: $md4 + px) {
+      @media screen and (max-width: $md3 + px) {
         width: 50%;
         height: 50%;
       }
@@ -168,24 +168,24 @@
 
   p {
     color: $black;
-    margin-top: calc(10px + (30 - 10) * ((100vw - 320px) / (1680 - 320)));
-
-    font-size: calc($fontSize12 + 12 * (100vw / 1520));
     font-style: italic;
     font-weight: 400;
-    line-height: 100%; /* 26px */
     max-width: 334px;
+    @include adaptive-font(26,13);
+    @include adaptive-value("line-height",26,13,1);
+    @include adaptive-value("margin-top",29,14,1)
 
 
   }
 
   h3 {
     color: $red;
-    font-size: calc($fontSize17 + 8 * (100vw / 1520));
     font-style: normal;
     font-weight: 400;
     text-transform: uppercase;
     max-width: 334px;
+    @include adaptive-font(24,12);
+
 
   }
 
@@ -221,8 +221,8 @@
     margin: 0 auto;
 
   }
-  @media screen and (max-width: $md4 + px) {
-    max-width: 250px;
+  @media screen and (max-width: 447 + px) {
+    max-width: 270px;
     margin: 0 auto;
     padding: 15px;
     min-height: 100px;
@@ -240,21 +240,23 @@
 
 
   button {
-    padding: 15px 100px;
+    padding: 13px 0;
     border-radius: 4px;
     color: white;
     text-transform: uppercase;
     text-align: center;
-    font-size: 22px;
     font-style: normal;
-    font-weight: 400;
-    line-height: 154.3%; /* 33.946px */
+    font-weight: 300;
     background: $backgroundGradient;
 
     &:hover {
       @include buttonHover
 
     }
+    @include adaptive-font(22,15);
+    @include adaptive-value("line-height",33,27,1);
+    @include adaptive-value("padding-right",105,47,1);
+    @include adaptive-value("padding-left",105,47,1);
 
   }
 
@@ -265,7 +267,7 @@
     height: 0;
     background-color: $black;
     transition: 3s;
-    top: -60px;
+    top: -20px;
     left: 20%;
 
     @media screen and (max-width: $md1 + px) {
@@ -278,5 +280,7 @@
     height: 225px;
 
   }
+
+
 }
 
