--- a/src/pages/header/style.scss
+++ b/src/pages/header/style.scss
@@ -72,6 +72,9 @@
   font-family: Commissioner;
   color: #191923;
 
+  &:hover{
+     color: $red;
+  }
 
 
 }
@@ -83,6 +86,7 @@
 
 .header_language_de {
   color: black;
+
 }
 
 
@@ -119,10 +123,17 @@
   display: flex;
   align-items: center;
   background: none;
+  transition: .3s;
 
   img {
     position: absolute;
     right: 11px;
+   color: white;
+  }
+  &:hover{
+     background-color: $red;
+    color: white;
+
   }
 
 }
