--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -277,7 +277,7 @@
   justify-content: center;
   position: relative;
   cursor: pointer;
-
+  padding: 10px;
 
 }
 
@@ -286,7 +286,6 @@
   align-items: center;
   justify-content: center;
   margin-top: 50px;
-  position: relative;
 
 
   &::before {
@@ -330,75 +329,72 @@
   }
 }
 
-.home_ellipse_large {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  background-color: white;
-  transition: .3s;
-  position: relative;
-  animation: shadow 3s infinite;
 
-}
-
-.home_ellipse_medium {
-  width: 70%;
-  height: 70%;
+.animation_pulse {
+  content: '';
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: absolute;
-  animation: shadow 3s infinite;
+  animation: pulsate infinite 2.5s;
+  border: 1px solid rgba(185, 18, 84, 0.10);
 
 }
-
-.home_ellipse_small {
-  width: 70%;
-  height: 70%;
+.animation_pulse_2{
+  content: '';
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  animation: shadow 3s infinite;
+  position: absolute;
+  animation: pulsate infinite 2.5s;
+  border: 1px solid rgba(185, 18, 84, 0.10);
 
 }
 
-@keyframes shadow {
+@keyframes pulsate {
   0% {
-    box-shadow: 0 0 50px rgba(185, 18, 84, 0.10); /* Start shadow properties */
-    transition: .3s;
-
-  }
-  20% {
-    box-shadow: 0 0 40px rgba(185, 18, 84, 0.10); /* Start shadow properties */
-    transition: .3s;
-
-  }
-  40% {
-    box-shadow: 0 0 30px rgba(185, 18, 84, 0.10); /* Start shadow properties */
-    transition: .3s;
-
+    -webkit-transform: scale(1, 1);
+    opacity: 1;
+    box-shadow: 0 0 50px rgba(185, 18, 84, 0.10);
   }
 
-  60% {
-    box-shadow: 0 0 20px rgba(185, 18, 84, 0.10);
-
-
-  }
-  80% {
-    box-shadow: 0 0 10px rgba(185, 18, 84, 0.10);
-
-
-  }
   100% {
-    box-shadow: 0 0 0px rgba(185, 18, 84, 0.10)
-
+    -webkit-transform: scale(1.3, 1.3);
+    box-shadow: 0 0 50px rgba(185, 18, 84, 0.10);
+    opacity: 0;
   }
+  //0% {
+  //  box-shadow: 0 0 50px rgba(185, 18, 84, 0.10);
+  //  transition: .3s;
+  //
+  //}
+  //20% {
+  //  box-shadow: 0 0 40px rgba(185, 18, 84, 0.10);
+  //  transition: .3s;
+  //
+  //}
+  //40% {
+  //  box-shadow: 0 0 30px rgba(185, 18, 84, 0.10);
+  //  transition: .3s;
+  //
+  //}
+  //
+  //60% {
+  //  box-shadow: 0 0 20px rgba(185, 18, 84, 0.10);
+  //
+  //
+  //}
+  //80% {
+  //  box-shadow: 0 0 10px rgba(185, 18, 84, 0.10);
+  //
+  //
+  //}
+  //100% {
+  //  box-shadow: 0 0 0px rgba(185, 18, 84, 0.10)
+  //
+  //}
 }
+
 
 .section_rotate_logo {
   @media screen and (max-width: $md3 + px) {
@@ -422,23 +418,21 @@
     width: 70%;
     height: 70%;
     object-fit: cover;
-    animation: logo 4s infinite linear;
-
   }
 
 }
 
 
-@keyframes logo {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-
-  }
-
-}
+//@keyframes logo {
+//  from {
+//    transform: rotate(0deg);
+//  }
+//  to {
+//    transform: rotate(360deg);
+//
+//  }
+//
+//}
 
 
 
