--- a/src/pages/components/scrollTop/style.scss
+++ b/src/pages/components/scrollTop/style.scss
@@ -6,24 +6,33 @@
   padding: 7px;
   background-color: $red;
   z-index: 10;
-  bottom: 0;
-  right: 0;
+  bottom: 10px;
+  right: 10px;
   border-radius: 10px;
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
 
-img{
+
+svg{
    transform: rotate(180deg);
+  transition: .3s;
   @media (max-width: $md3 + px) {
     width: 50%;
     height: 50%;
   }
+
 }
   @media (max-width: $md4 + px) {
     padding: 5px 1px;
 
+  }
+  &:hover{
+
+    svg path{
+      stroke: white;
+    }
   }
 }
 
