--- a/src/pages/header/style.scss
+++ b/src/pages/header/style.scss
@@ -33,8 +33,8 @@
   }
 
   @media screen and (max-width: $md4 + px) {
-    img{
-       width: 45%;
+    img {
+      width: 45%;
       height: 45%;
     }
 
@@ -46,14 +46,13 @@
   flex: 1 1 auto;
 
 
-
 }
 
 .header_download {
   display: flex;
   gap: 43px;
   @media screen and (max-width: $md1 + px) {
-     display: none;
+    display: none;
   }
 }
 
@@ -70,10 +69,9 @@
   line-height: 13px; /* 12.959px */
   text-transform: uppercase;
   font-family: Commissioner;
-  color: #191923;
 
-  &:hover{
-     color: $red;
+  &:hover {
+    color: $red;
   }
 
 
@@ -81,7 +79,6 @@
 
 .header_language_en {
   color: $red;
-
 }
 
 .header_language_de {
@@ -124,16 +121,14 @@
   align-items: center;
   background: none;
   transition: .3s;
+  gap: 30px;
 
-  img {
-    position: absolute;
-    right: 11px;
-   color: white;
-  }
-  &:hover{
-     background-color: $red;
+  &:hover {
+    background-color: $red;
     color: white;
-
+    svg path {
+      fill: white; /* Change the fill color to red on hover */
+    }
   }
 
 }
@@ -156,9 +151,11 @@
     @include buttonHover
   }
 }
-.burger_menu{
-   display: none;
+
+.burger_menu {
+  display: none;
 }
+
 @media screen and (max-width: $md1 + px) {
   .burger_menu {
     position: relative;
@@ -185,7 +182,8 @@
       }
 
     }
-    &.active::after{
+
+    &.active::after {
       transform: translateY(18px) rotate(45deg);
       width: 70%;
 
@@ -228,14 +226,16 @@
       }
 
     }
-    &.active::before{
+
+    &.active::before {
       transform: translateY(-10px) rotate(-45deg);
       width: 70%;
       @media screen and (max-width: $md4 + px) {
 
       }
     }
-    &.active span{
+
+    &.active span {
       transform: scaleX(0);
 
     }
@@ -245,7 +245,13 @@
       height: 25px;
 
     }
-
+  &:hover{
+    span,
+    &::after,
+    &::before{
+        background-color: $red;
+    }
+  }
   }
 
 }
