--- a/src/pages/home/components/partners/style.scss
+++ b/src/pages/home/components/partners/style.scss
@@ -88,24 +88,39 @@
   background-color: white;
   width: 150px;
   min-height: 58px;
-
-  img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    padding: 0 30px;
-
-  }
-  @media (max-width: $md4 + px){
-    width: 100px;
-
-    img {
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  svg{
+     position: absolute;
+      width: 100%;
+      height: 100%;
       padding: 0 20px;
-
-    }
-
+    transition: .3s;
   }
+  &:hover{
+     svg path{
+       fill: #4545e3;
+     }
+  }
+
+  //img {
+  //  position: absolute;
+  //  width: 100%;
+  //  height: 100%;
+  //  padding: 0 30px;
+  //
+  //}
+  //@media (max-width: $md4 + px){
+  //  width: 100px;
+  //
+  //  img {
+  //
+  //    padding: 0 20px;
+  //
+  //  }
+  //
+  //}
 
 }
 
